scripts/nullaway/original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8.txt
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:53: error: [NullAway] initializer method does not guarantee @NonNull fields x (line 16), y (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ECPoint(byte[] bytes, EllipticCurve mother) {
           ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:19: error: [NullAway] assigning @Nullable expression to @NonNull field
    private ECPoint[] fastcache = null;
                      ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:20: error: [NullAway] assigning @Nullable expression to @NonNull field
    private ECPoint[] cache = null;
                      ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:128: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:156: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:169: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:182: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/EllipticCurve.java:34: error: [NullAway] initializer method does not guarantee @NonNull fields order (line 15), generator (line 16), ppodbf (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public EllipticCurve(BigInteger a, BigInteger b, BigInteger p) throws InsecureCurveException {
           ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/EllipticCurve.java:130: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	return null;
	^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/EllipticCurve.java:135: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	return null;
	^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/RevocationManager.java:100: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.revocList.get(index);
		^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/OpeningManager.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields opk (line 39), osk (line 40) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public OpeningManager(IssuingManager issue, RevocationManager revoc){
	       ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/OpeningManager.java:117: error: [NullAway] dereferenced expression mpk is @Nullable
				if(mpk.geth().getx().compareTo(S1.getx()) == 0 && mpk.geth().gety().compareTo(S1.gety()) == 0){
				      ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/client/User.java:50: error: [NullAway] initializer method does not guarantee @NonNull fields msk (line 39), mpk (line 40) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public User(String pseudo, IssuingManager issue, OpeningManager open, RevocationManager revoc){
	       ^
    (see http://t.uber.com/nullaway )
../original/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/client/User.java:241: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return signature;
		^
    (see http://t.uber.com/nullaway )
15 errors
